--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.0.0",
+    "@prisma/adapter-neon": "^5.13.0",
     "@prisma/client": "^5.13.0",
+    "bcrypt": "^5.1.1",
     "next": "14.2.2",
+    "next-auth": "^5.0.0-beta.17",
     "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18"
