--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-auth": "^5.0.0-beta.17",
     "prisma": "^5.13.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
