--- a/package.json
+++ b/package.json
@@ -12,15 +12,24 @@
     "@auth/prisma-adapter": "^2.0.0",
     "@prisma/adapter-neon": "^5.13.0",
     "@prisma/client": "^5.13.0",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "crypto-js": "^4.2.0",
+    "formik": "^2.4.6",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.2",
     "next-auth": "^5.0.0-beta.17",
-    "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.0"
+    "react-icons": "^5.2.0",
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -28,6 +37,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
