--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.2",
-    "next-auth": "^5.0.0-beta.17",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.0",
+    "react-toastify": "^10.0.5",
     "yup": "^1.4.0",
     "zod": "^3.23.8"
   },
