--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.0.0",
+    "@aws-sdk/client-s3": "^3.592.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/adapter-neon": "^5.13.0",
     "@prisma/client": "^5.13.0",
