--- a/package.json
+++ b/package.json
@@ -10,21 +10,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.0.0",
+    "@auth/prisma-adapter": "^2.2.0",
     "@aws-sdk/client-s3": "^3.592.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/adapter-neon": "^5.13.0",
-    "@prisma/client": "^5.13.0",
+    "@hookform/resolvers": "^3.6.0",
+    "@prisma/client": "^5.15.0",
     "axios": "^1.6.8",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.2",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.0",
     "react-toastify": "^10.0.5",
@@ -32,7 +31,6 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
