--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.2",
