--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,8 @@ yarn-error.log*
 #backend env file 
 backend/.env
 
-#db_postgres
-db_postgres
+#static directory in backend
+backend/adoptImages
 
 # vercel
 .vercel
