--- a/package.json
+++ b/package.json
@@ -4,16 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
-    "postinstall": "prisma generate",
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.2.0",
-    "@aws-sdk/client-s3": "^3.600.0",
     "@hookform/resolvers": "^3.6.0",
-    "@prisma/client": "^5.15.0",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
@@ -21,7 +17,6 @@
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.2",
-    "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
@@ -41,7 +36,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
-    "prisma": "^5.15.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
