--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.0",
     "react-toastify": "^10.0.5",
+    "swiper": "^11.1.9",
     "yup": "^1.4.0",
     "zod": "^3.23.8"
   },
