--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.2.2",
+    "next": "^14.2.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
