fix in docker compose to include 2 static directories for serving images

--- a/compose.yaml
+++ b/compose.yaml
@@ -31,6 +31,9 @@ services:
             - 'go.sum'
     depends_on:
       - postgres
+    volumes:
+      - ./backend/adoptImages:/app/adoptImages
+      - ./backend/lostPetImages:/app/lostPetImages
     environment:
       DATABASE_URL: postgresql://postgres:password@postgres/testing?sslmode=disable
 
