--- a/compose.yaml
+++ b/compose.yaml
@@ -32,7 +32,7 @@ services:
     depends_on:
       - postgres
     volumes:
-      - ./backend/adoptImages:/app/adoptImages
+      - ./backend/adoptPostImages:/app/adoptPostImages/
       - ./backend/lostPetImages:/app/lostPetImages
     environment:
       DATABASE_URL: postgresql://postgres:password@postgres/testing?sslmode=disable
