--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@next/env": "^14.2.8",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
